# DevOps_labs

lab_1/: README.md
lab_1/src/: Dockerfile  docker-compose.yml  nginx.conf
lab_1/src/html/: index.html
lab_2/: README.md
lab_2/src/: .env  Dockerfile  app.py  docker-compose.yml  migrate_and_start.sh
lab_2/src/migrations/versions/: ffaa2b80396d_initial_migration.py
lab_2/src/templates/: index.html
lab_3/: README.md
lab_3/src/: .env  docker-compose.yml
lab_3/src/src/: .dockerignore  Dockerfile  main.cpp
lab_4/: README.md
lab_4/src/: .dockerignore  .env  Dockerfile.build  Dockerfile.run  Dockerfile.system  docker-compose.yml
lab_4/src/src/: CMakeLists.txt  Dockerfile  ERROR.c
